# project-arcus

./: .gitignore  AI_CONTEXT.md  CONTRIBUTING.md  README.md
legacy/poc/: .cursorrules  CONTRIBUTING.md  Dockerfile  Makefile  README.md  api_server.py  pyproject.toml  requirements.txt
legacy/poc/.ai_governance/: PILOT_ROADMAP.md  compliance_guardrails.md  spec.md
legacy/poc/.devcontainer/: devcontainer.json
legacy/poc/.github/workflows/: demo-smoke.yml  publish_bootstrap.yml
legacy/poc/agentic/critic/: api_critic.md  generator_critic.md  repo_critic.md  schema_critic.md
legacy/poc/agentic/tasks/: task_api_update.md  task_full_pipeline.md  (+2 more)
legacy/poc/config/: demo.yaml  pip.conf.example
legacy/poc/docs/: CONFLUENCE_SPACE.md  DEMO_HARDENING_LOG.md  DEMO_READINESS.md  DOCKER_ENTERPRISE.md  PILOT_CHARTER.md  QA_SIGNOFF.md  ROADMAP_ENTERPRISE.md  SECURITY_BEST_PRACTICES.md  agentic_workflow.md  api.md
legacy/poc/governance/: DATA_STEWARDSHIP.md  DECISIONS_LOG.md  README_GOVERNANCE.md
legacy/poc/mop/: index.yaml  master_orchestrator_prompt.md
legacy/poc/prompts/: demo_mop.md
legacy/poc/scripts/: bootstrap_and_demo.ps1  bootstrap_and_demo.sh  check_makefile_syntax.sh  critic_check.py  demo_data.py  demo_start_api.sh  demo_stop_api.sh  demo_validate.py  docker_run_demo.sh  publish_bootstrap_assets.ps1  publish_bootstrap_assets.sh  run_demo_flow.py
legacy/poc/tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_dataset_metadata.py  test_generator.py  test_schema_person.py  test_schema_validation.py  test_schema_vehicle.py  utils.py
(+183 files in other folders)
