[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-synthetic-data-hub"
version = "0.1.0"
description = "POC scaffolding for CSAA/Mobilitas synthetic data generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "CSAA Mobilitas Synthetic Data Team", email = "syntheticdata@example.com"}
]
keywords = ["synthetic data", "mobilitas", "csaa", "poc"]
dependencies = [
  "pydantic>=2.7",
  "pytest>=7.4",
  "flask>=3.0",
  "pandas>=2.2",
  "requests>=2.31",
  "rich>=13.7",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: demo smoke tests that hit the API + CLI",
  "demo: fast demo verification suite",
]
